# JUCE

./: BREAKING-CHANGES.txt  CMakeLists.txt
JuceLibraryCode/juce/: AppConfig.h  JuceAudio.h  JuceCore.h  JuceGraphics.h  JuceHeader.h  include_juce_accessibility.cpp  include_juce_accessibility.mm  include_juce_gui_basics_native.cpp  include_juce_gui_basics_native.mm
examples/Audio/: AudioAppDemo.h  AudioLatencyDemo.h  AudioPlaybackDemo.h  AudioRecordingDemo.h  AudioSettingsDemo.h  AudioSynthesiserDemo.h  MPEDemo.h  MidiDemo.h  PluckedStringsDemo.h  SimpleFFTDemo.h
examples/BLOCKS/: BlocksDrawingDemo.h  BlocksMonitorDemo.h  BlocksSynthDemo.h
examples/DSP/: ConvolutionDemo.h  FIRFilterDemo.h  GainDemo.h  IIRFilterDemo.h  OscillatorDemo.h  OverdriveDemo.h  SIMDRegisterDemo.h  StateVariableFilterDemo.h  WaveShaperTanhDemo.h
examples/DemoRunner/: DemoRunner.jucer
examples/DemoRunner/JuceLibraryCode/: JuceHeader.h  include_juce_accessibility.mm  include_juce_gui_basics_native.cpp
examples/GUI/: AnimationAppDemo.h  AnimationDemo.h  BouncingBallWavetableDemo.h  CameraDemo.h  CodeEditorDemo.h  ComponentDemo.h  ComponentTransformsDemo.h  DialogsDemo.h  FlexBoxDemo.h  FontsDemo.h  GraphicsDemo.h  GridDemo.h  HelloWorldDemo.h  ImagesDemo.h  KeyMappingsDemo.h  LookAndFeelDemo.h  MDIDemo.h  MenusDemo.h  MultiTouchDemo.h  OpenGLAppDemo.h  OpenGLDemo.h  OpenGLDemo2D.h  PropertiesDemo.h  VideoDemo.h  WebBrowserDemo.h  WidgetsDemo.h  WindowsDemo.h
examples/Plugins/: AUv3SynthPluginDemo.h  ArpeggiatorPluginDemo.h  AudioPluginDemo.h  DSPModulePluginDemo.h  GainPluginDemo.h  InterAppAudioEffectPluginDemo.h  MidiLoggerPluginDemo.h  MultiOutSynthPluginDemo.h  NoiseGatePluginDemo.h  SamplerPluginDemo.h  SurroundPluginDemo.h
examples/Utilities/: AnalyticsCollectionDemo.h  Box2DDemo.h  ChildProcessDemo.h  CryptographyDemo.h  InAppPurchasesDemo.h  JavaScriptDemo.h  LiveConstantDemo.h  MultithreadingDemo.h  NetworkingDemo.h  OSCDemo.h  PushNotificationsDemo.h  SystemInfoDemo.h  TimersAndEventsDemo.h  UnitTestsDemo.h  ValueTreesDemo.h  XMLandJSONDemo.h
extras/AudioPerformanceTest/: AudioPerformanceTest.jucer
extras/AudioPerformanceTest/JuceLibraryCode/: JuceHeader.h
extras/AudioPluginHost/: AudioPluginHost.jucer
extras/AudioPluginHost/JuceLibraryCode/: JuceHeader.h  include_juce_accessibility.cpp
extras/NetworkGraphicsDemo/: NetworkGraphicsDemo.jucer
extras/NetworkGraphicsDemo/JuceLibraryCode/: JuceHeader.h  include_juce_gui_basics_native.mm
extras/Projucer/: Projucer.jucer
extras/Projucer/JuceLibraryCode/: JuceHeader.h
extras/UnitTestRunner/: UnitTestRunner.jucer
extras/UnitTestRunner/JuceLibraryCode/: JuceHeader.h
extras/WindowsDLL/: WindowsDLL.jucer
extras/WindowsDLL/JuceLibraryCode/: JuceHeader.h
modules/: CMakeLists.txt
modules/juce_accessibility/: juce_accessibility.cpp  juce_accessibility.h  juce_accessibility.mm
modules/juce_accessibility/enums/: juce_AccessibilityActions.h  juce_AccessibilityEvent.h
modules/juce_accessibility/handler/: juce_AccessibilityHandler.cpp  juce_AccessibilityHandler.h  juce_AccessibilityState.h
modules/juce_accessibility/interfaces/: juce_AccessibilityCellInterface.h
modules/juce_accessibility/native/: juce_mac_Accessibility.mm  juce_mac_AccessibilityElement.mm  juce_win32_Accessibility.cpp  juce_win32_AccessibilityElement.cpp  juce_win32_AccessibilityElement.h  juce_win32_UIAGridItemProvider.h  juce_win32_UIAGridProvider.h  juce_win32_UIAHelpers.h  juce_win32_UIAInvokeProvider.h  juce_win32_UIAProviders.h  juce_win32_UIASelectionProvider.h  juce_win32_UIATextProvider.h  juce_win32_UIAToggleProvider.h  juce_win32_UIAWindowProvider.h  juce_win32_WindowsUIAWrapper.h
modules/juce_analytics/destinations/: juce_ThreadedAnalyticsDestination.cpp
modules/juce_audio_devices/audio_io/: juce_AudioDeviceManager.cpp
modules/juce_audio_devices/native/: juce_win32_Midi.cpp
modules/juce_audio_processors/: juce_audio_processors.cpp
modules/juce_audio_processors/format_types/: juce_VST3Headers.h
modules/juce_core/native/: juce_mac_Network.mm  juce_osx_ObjCHelpers.h
modules/juce_core/threads/: juce_Thread.cpp
modules/juce_graphics/native/: juce_mac_CoreGraphicsHelpers.h  juce_win32_DirectWriteTypeface.cpp
modules/juce_gui_basics/: juce_gui_basics.cpp  juce_gui_basics.h  juce_gui_basics_native.cpp  juce_gui_basics_native.mm
modules/juce_gui_basics/accessibility/: juce_AccessibilityHandler.cpp  juce_AccessibilityHandler.h  juce_AccessibilityState.h  juce_ButtonAccessibilityHandler.h  juce_ComboBoxAccessibilityHandler.h  juce_ComponentAccessibilityHandler.cpp  juce_ComponentAccessibilityHandler.h  juce_DocumentWindowAccessibilityHandler.h  juce_LabelAccessibilityHandler.h  juce_SliderAccessibilityHandler.h  juce_TableListBoxAccessibilityHandler.h  juce_TextEditorAccessibilityHandler.h
modules/juce_gui_basics/buttons/: juce_Button.cpp
modules/juce_gui_basics/components/: juce_Component.cpp  juce_Component.h  juce_ComponentTraverser.h  juce_FocusTraverser.cpp  juce_FocusTraverser.h  juce_ScalingHelpers.h
modules/juce_gui_basics/desktop/: juce_Desktop.cpp
modules/juce_gui_basics/drawables/: juce_Drawable.cpp  juce_DrawableComposite.cpp  juce_DrawableComposite.h  juce_DrawableText.cpp
modules/juce_gui_basics/filebrowser/: juce_FileBrowserComponent.cpp  juce_FilenameComponent.cpp  juce_FilenameComponent.h  juce_ImagePreviewComponent.cpp
modules/juce_gui_basics/keyboard/: juce_KeyboardFocusTraverser.cpp  juce_KeyboardFocusTraverser.h
modules/juce_gui_basics/layout/: juce_ConcertinaPanel.cpp  juce_Grid.cpp  juce_GroupComponent.cpp  juce_ScrollBar.cpp  juce_SidePanel.cpp  juce_TabbedButtonBar.cpp  juce_TabbedComponent.cpp
modules/juce_gui_basics/menus/: juce_BurgerMenuComponent.cpp  juce_MenuBarComponent.cpp  juce_MenuBarComponent.h  juce_PopupMenu.cpp
modules/juce_gui_basics/misc/: juce_BubbleComponent.cpp  juce_BubbleComponent.h  juce_DropShadower.cpp  juce_JUCESplashScreen.cpp
modules/juce_gui_extra/: juce_gui_extra.cpp
modules/juce_opengl/: juce_opengl.cpp  juce_opengl.h
(+118 files in other folders)
